[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Enemy/EnemyTwo.gd" type="Script" id=1]
[ext_resource path="res://Particles/ExplosionParticles.tres" type="Material" id=2]
[ext_resource path="res://Sounds/Laser.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/EnemyRocket.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/EnemyTwo.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 30, 60, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 30, 60, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 60, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 60, 0, 60, 30 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "IdleTwo",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 0, 10, 0 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 1000, 0, 0 )
initial_velocity = 333.33
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 0.25
color = Color( 0.521569, 0.188235, 0.188235, 1 )

[node name="EnemyTwo" type="KinematicBody2D"]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource( 1 )

[node name="Ship" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Rocket" type="AnimatedSprite" parent="."]
position = Vector2( 78.3011, -5.92396 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 5 )
animation = "IdleTwo"
frame = 1
playing = true

[node name="RocketParticles" type="Particles2D" parent="."]
position = Vector2( 55.7846, -5.95275 )
z_index = -10
amount = 2
lifetime = 0.5
explosiveness = 0.13
process_material = SubResource( 6 )

[node name="CollisionArea" type="Area2D" parent="."]
z_index = -1
collision_layer = 4
collision_mask = 3

[node name="HitBox" type="CollisionPolygon2D" parent="CollisionArea"]
visible = false
polygon = PoolVector2Array( 10.0551, -17.7463, 10.5848, -28.341, 22.7686, -28.341, 22.2389, -39.995, 44.4876, -39.995, 43.9579, -29.4004, 32.8336, -28.341, 32.8336, -17.2166, 55.612, -16.6869, 55.612, 5.56186, 45.0174, 5.56186, 45.0174, 15.6268, 33.893, 15.6268, 33.893, 27.2809, 45.0174, 27.8106, 45.0174, 38.935, 22.7686, 39.4647, 21.7092, 28.3403, 0.519928, 27.8106, -0.00979614, 17.216, -21.7288, 16.6862, -22.2585, 6.0916, -43.9775, 5.56186, -44.5073, -6.09222, -55.6316, -5.5625, -55.1019, -16.6869 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
speed_scale = 2.0
explosiveness = 0.74
local_coords = false
process_material = ExtResource( 2 )

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 0.34

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 2.5

[node name="ProjectileEmitter" type="Area2D" parent="."]
position = Vector2( -62.7023, -5.55591 )
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="_on_Notifier_screen_exited"]
[connection signal="timeout" from="BulletCooldown" to="." method="_on_BulletCooldown_timeout"]
